--- a/pages.css
+++ b/pages.css
@@ -3,32 +3,72 @@ html{
     font-weight: 300;
 }
 
-.h1{
-    font-size: 60px;
+h1{
+    font-size: 55px;
     font-weight: 500;
 }
 
+h2{
+    font-size: 30px;
+}
+
+p{
+    margin-right: 300px;
+}
+
 body{
-    margin-top: 100px;
     margin-left: 140px;
     margin-right: 140px;
 }
 
+
+.flexbox-container {
+    display: flex;
+    justify-content: center;
+}
+
+.flexbox-container-vertical {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.platform {
+    width: 1000px;
+    height: 250px;
+    margin: 25px;
+    background-color: #f8f9fa;
+}
+
+.platform-name {
+    text-align: left;
+    font-weight: 300;
+    margin-top: 20px;
+    font-size: 16px;
+}
+
+.platform-description{
+    text-align: justify;
+    margin: 25px;
+}
+
+
 .topnav {
     overflow: hidden;
     background-color: #333;
-  }
-  
-  .topnav a {
+}
+
+.topnav a {
     float: left;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-  }
-  
-  .topnav a:hover {
+}
+
+.topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
+}
