--- a/pages.css
+++ b/pages.css
@@ -24,28 +24,26 @@ body{
 
 .flexbox-container {
     display: flex;
-    justify-content: center;
 }
 
 .flexbox-container-vertical {
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
 }
 
 .platform {
-    width: 1000px;
+    width: 100%;
     height: 250px;
     margin: 25px;
     background-color: #f8f9fa;
 }
 
 .platform-name {
-    text-align: left;
+    margin-left: 25px;
     font-weight: 300;
     margin-top: 20px;
     font-size: 16px;
+    font-weight: 500;
 }
 
 .platform-description{
@@ -71,4 +69,8 @@ body{
 .topnav a:hover {
     background-color: #ddd;
     color: black;
+}
+
+.banner {
+    max-width: 700px;
 }
