--- a/css/welcome.css
+++ b/css/welcome.css
@@ -8,7 +8,27 @@ html{
 }
 
 body{
-    background-image: url("images/background.jpg");
+    background-image: url("../images/background_git.gif");
+}
+
+#welcome{
+    padding-top: 10px;
+    margin-top: 15px;
+    color: black;
+    font-size: 30px;
+    text-align: center;
+    height: 50px;
+}
+
+#values{
+    padding-top: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-top: 15px;
+    color: black;
+    font-size: 20px;
+    text-align: center;
+    height: 100px;
 }
 
 .flexbox-container {
@@ -54,10 +74,10 @@ body{
     color:rgb(230, 83, 83);
 }
 
-.quiz:hover { 
+/* .quiz:hover { 
     background-color: rgb(230, 83, 83); 
     color: white;
-}
+} */
 
 .quizTitle{
     margin-top: 25px;
